--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <h1>Bill and franco will make this work</h1>
+    <h1>Bill and franco made this work</h1>
     <%- body %>
   </body>
 </html>
